# jeryu-intelligence

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  VERSION
agent/: JANKURAI_STANDARD.md  audit-policy.toml  boundaries.toml  generated-zones.toml  owner-map.json  test-map.json
crates/jeryu-autonomy/: Cargo.toml
crates/jeryu-autonomy/src/: clock.rs  evidence.rs  freeze.rs  full_auto.rs  lib.rs  policy_yaml.rs  policy_yaml_types.rs  quorum.rs  rejudge.rs  replay.rs  seam.rs  sha_bind.rs  signing.rs  test_support.rs
crates/jeryu-autonomy/src/auto_rejudge/: mod.rs  tests.rs
crates/jeryu-autonomy/src/conditions/: anti_vibe.rs  ci.rs  external.rs  mod.rs  paths.rs  review.rs  security.rs  supply_chain.rs  tests.rs
crates/jeryu-autonomy/src/escalation/: config.rs  dispatch.rs  event.rs  mod.rs  payload.rs
crates/jeryu-autonomy/src/full_auto/: tests.rs
crates/jeryu-autonomy/src/judge/: inputs.rs  mod.rs  tests.rs  verdict_id.rs
crates/jeryu-autonomy/src/kill_bell/: mod.rs  tests.rs
crates/jeryu-autonomy/src/ledger/: mod.rs  tests.rs
crates/jeryu-autonomy/src/types/: common.rs  evidence.rs  intent.rs  lease.rs  ledger.rs  mod.rs  passport.rs  receipt.rs  schema_tag.rs  verdict.rs
crates/jeryu-autonomy/src/verdict_store/: mod.rs
crates/jeryu-autonomy/src/verdict_store/tests/: mod.rs  query.rs  save.rs
crates/jeryu-autonomy/tests/: evidence_gate_e2e.rs  full_auto_e2e.rs
crates/jeryu-codegraph/: Cargo.toml
crates/jeryu-codegraph/src/: error.rs  export_gate.rs  graph.rs  lib.rs  oracle.rs  slice.rs  storage.rs  tool_build.rs
crates/jeryu-codegraph/src/oracle/: governance.rs  types.rs
crates/jeryu-codegraph/src/tool_build/: enrich.rs  families.rs  merge.rs  mod.rs  normalize.rs  progress.rs  scan.rs  walk.rs
crates/jeryu-codegraph/tests/: integration.rs
crates/jeryu-mcp/: Cargo.toml
crates/jeryu-mcp/src/: lib.rs
crates/jeryu-mcp/src/backend/: bridge.rs  memory.rs  mod.rs
crates/jeryu-mcp/src/core/: io.rs  jsonrpc.rs  mod.rs  protocol.rs  tools_call.rs
crates/jeryu-mcp/src/http/: mod.rs  post.rs  support.rs
crates/jeryu-mcp/src/tools/: mod.rs  schema.rs
crates/jeryu-mcp/src/tools/catalog/: definitions.rs  input_schema.rs  kind.rs  mod.rs
crates/jeryu-mcp/tests/: bridge_backend.rs  mcp_conformance.rs
crates/jeryu-review/: Cargo.toml
crates/jeryu-review/assets/prompts/: lockfile-scout.md  reviewer-nightwatch.md  reviewer-runtime.md  reviewer-security.md  reviewer-test-integrity.md
crates/jeryu-review/src/: conditions.rs  lib.rs  parse.rs  policy.rs  prompt_builder.rs  rejudge.rs  signing.rs  test_support.rs
crates/jeryu-review/src/approval/: mod.rs  quorum.rs  sha_bind.rs
crates/jeryu-review/src/judge/: mod.rs  tests.rs
crates/jeryu-review/src/llm/: budget.rs  mod.rs  router.rs  scrub.rs
crates/jeryu-review/src/orchestrator/: fake.rs  mod.rs  production.rs  receipt.rs
crates/jeryu-review/src/reviewers/: lockfile.rs  mod.rs  nightwatch.rs  runner.rs  runtime.rs  security.rs  test_integrity.rs
crates/jeryu-review/src/schema/: mod.rs  tag.rs
crates/jeryu-review/tests/: flow.rs  judge.rs  orchestrator.rs  prompt_replay.rs  quorum.rs  sha_bind.rs
crates/jeryu-review/tests/common/: mod.rs
crates/jeryu-rustjet/: Cargo.toml
crates/jeryu-rustjet-cli/: Cargo.toml
crates/jeryu-rustjet-cli/src/: main.rs
crates/jeryu-rustjet/src/: benchmarks.rs  changes.rs  error.rs  explain.rs  features.rs  graph.rs  lib.rs  manifest.rs  nextest.rs  pathset.rs  public_api.rs  report.rs  sccache.rs  sharding.rs
crates/jeryu-rustjet/src/classifier/: derive.rs  mod.rs  types.rs
crates/jeryu-rustjet/tests/: affected_classifier.rs  cargo_graph.rs  explain.rs  invalidation.rs  public_api.rs  sccache_policy.rs  shard_union.rs  sharding.rs  warm_bench_contract.rs
crates/jeryu-rustjet/tests/common/: mod.rs
docs/: architecture.md  codegraph-oracle.md  codegraph-tool-build.md
fixtures/rust-small/: Cargo.toml  README.md
fixtures/rust-small/crates/api/: Cargo.toml
fixtures/rust-small/crates/api/src/: lib.rs
fixtures/rust-small/crates/app/: Cargo.toml
fixtures/rust-small/crates/app/src/: main.rs
fixtures/rust-small/crates/core/: Cargo.toml
fixtures/rust-small/crates/core/src/: internal.rs  lib.rs
fixtures/rust-small/crates/core/tests/: core_tests.rs
fixtures/rust-small/crates/macro_magic/: Cargo.toml
fixtures/rust-small/crates/macro_magic/src/: lib.rs
fixtures/rust-small/crates/native/: Cargo.toml  build.rs
fixtures/rust-small/crates/native/native/: build_input.conf
fixtures/rust-small/crates/native/src/: lib.rs
ops/ci/: artifact_support.sh  codegraph-oracle.sh  codegraph-tool-build.sh  common.sh  pr-ci.sh
