[workspace]
resolver = "2"
members = [
  "crates/jeryu-codegraph",
  "crates/jeryu-rustjet",
  "crates/jeryu-rustjet-cli",
  "crates/jeryu-mcp",
  "crates/jeryu-review",
  "crates/jeryu-autonomy",
]
exclude = [
  "fixtures/rust-small",
]

[workspace.package]
version = "5.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/neverhuman/jeryu"
authors = ["Jeryu"]
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
parking_lot = "0.12"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
vt100 = "0.16"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
pedantic = { level = "allow", priority = -1 }

# Local split development patches. Release builds consume the pinned Git tags above.
[patch."https://github.com/neverhuman/jeryu-core.git"]
jeryu-core = { path = "../jeryu-core/crates/jeryu-core" }
jeryu-proof = { path = "../jeryu-core/crates/jeryu-proof" }

[patch."https://github.com/neverhuman/jeryu-ci-runner.git"]
jeryu-agentbridge = { path = "../jeryu-ci-runner/crates/jeryu-agentbridge" }

[patch."https://github.com/neverhuman/jeryu-release-ops.git"]
jeryu-signing = { path = "../jeryu-release-ops/crates/jeryu-signing" }
