[package]
name = "jeryu-autonomy"
version.workspace = true
edition = "2024"
description = "Evidence-Gate autonomous-delivery control plane for jeryu: hard-stop condition registry, verdict fusion, append-only signed ledger, kill-bell pause/resume, and escalation dispatch."
license = "MIT OR Apache-2.0"

[dependencies]
jeryu-signing = { git = "https://github.com/neverhuman/jeryu-release-ops.git", tag = "jeryu-release-ops-v4.0.0-split.0", package = "jeryu-signing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
