[package]
name = "jeryu-codegraph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Additive workspace code graph: symbol index, impact analysis, and export slice gate"

[dependencies]
jeryu-rustjet = { path = "../jeryu-rustjet" }
blake3 = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[lib]
name = "jeryu_codegraph"
path = "src/lib.rs"

[[bin]]
name = "jeryu-codegraph"
path = "src/bin/jeryu-codegraph.rs"

[lints]
workspace = true
