[package]
name = "jeryu-mcp"
version.workspace = true
edition = "2024"
description = "MCP (Model Context Protocol) stdio + loopback-HTTP JSON-RPC transport and tool catalog for jeryu"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["io-std", "io-util", "rt", "rt-multi-thread", "macros", "net", "sync"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
jeryu-core = { git = "https://github.com/neverhuman/jeryu-core.git", tag = "jeryu-core-v4.0.0-split.0", package = "jeryu-core" }
jeryu-codegraph = { path = "../jeryu-codegraph" }
jeryu-proof = { git = "https://github.com/neverhuman/jeryu-core.git", tag = "jeryu-core-v4.0.0-split.0", package = "jeryu-proof" }
jeryu-agentbridge = { git = "https://github.com/neverhuman/jeryu-ci-runner.git", tag = "jeryu-ci-runner-v4.0.0-split.0", package = "jeryu-agentbridge" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
